"java.text.ParseException: Unparseable date" error for JDK21 jstl fix with COMPAT option.
Signed-off-by: Gurunandan Rao <gurunandan.rao@oracle.com>