@@ -104,6 +104,8 @@ cd $TCK_HOME/$GF_TOPLEVEL_DIR/glassfish/bin
 ./asadmin create-jvm-options -Djavax.xml.accessExternalSchema=all
 ./asadmin create-jvm-options -Djavax.xml.accessExternalDTD=file,http
 
+#https://github.com/eclipse-ee4j/jakartaee-tck/issues/631
+./asadmin create-jvm-options -Djava.locale.providers=COMPAT
 ./asadmin stop-domain
 ./asadmin start-domain
 
